   root cause for such errors (missing dependencies, broken .service files,
   talking to the wrong bus, etc.) (LP: #1020572)
 * hookutils.py, attach_alsa(): Use alsa-info.sh when available. Thanks David
   Henningson.

Bug fixes:
 * ui tests, test_wait_for_pid(): Fix eternal hang when running as root.
 * testsuite: Fix ResourceWarnings when running with Python 3.

2.3 (2012-07-09):
-----------------
Improvements:
 * launchpad.py: Rework test suite to not use Launchpad's +storeblob facility
   at all any more. It almost never works on staging and is horribly slow. Fake
   the bug creation from a blob by manually creating the comment and
   attachments ourselves, and just assume that storeblob works on production.
   Also change the structure to allow running every test individually.
 * crash-digger: Add --crash-db option to specify a non-default crash databae
   name. (LP: #1003506)
 * apport-gtk: Add --hanging option to specify the process ID of a hanging
   application. If the user chooses to report this error, apport will terminate
   the pid with SIGABRT, otherwise it will send SIGKILL. The normal core pipe
   handler will be used to process the resulting report file, with a .hanging
   file in /var/crash to separate these from regular crashes.

Bug fixes:
 * apport: Also treat a binary as modified if the /proc/pid/exe symlink does
   not point to an existing file any more. (LP: #984944)
 * Fix PEP-8 violations picked up by latest pep8 checker.
 * ui.py: Do not ignore certain exceptions during upload which are not likely
   to be a network error.
 * launchpad.py: Recongize Launchpad projects for bug query and marking
   operations. (LP: #1003506)
 * packaging-apt-dpkg.py: Fix get_source_tree() to work with apt sandboxes.
 * apport-retrace: Turn StacktraceSource generation back on, now that it works
   with the current sandboxing.
 * launchpad.py: Ensure that upload chunk size does not underrun. (LP: #1013334)